Added the maven plugins inc enforcer